--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
   "description": "Simple interface to make api calls to mailCleaning.club endpoints.",
   "type": "library",
   "license": "MIT",
-  "version": "1.0.0",
   "authors": [
     {
       "name": "Bledar Leka",
@@ -14,10 +13,10 @@
     "php": ">=5.4"
   },
   "autoload": {
-    "psr-4": {
-      "\\Emailcleaningclub\\Verification\\": "src/"
+    "psr-0": {
+      "Emailcleaningclub": "src/"
     }
   },
-
+  "minimum-stability": "dev",
   "prefer-stable": true
 }
